Fix Mobile View so Content does not Overflow

--- a/mainstyles.css
+++ b/mainstyles.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-  width: 62.5rem;
+  max-width: 62.5rem;
   margin: 0 auto;
 }
 
@@ -25,7 +25,7 @@ h1 {
 }
 
 .mainHomepage {
-  width: 62.5rem;
+  max-width: 62.5rem;
   margin: 0 auto;
 }
 
@@ -47,12 +47,13 @@ p {
 
 .buttons {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
 .buttonWrapper {
   text-align: left;
-  margin: 3rem 1rem 0 1rem;
+  margin: 3rem 3rem 0 1rem;
 }
 
 button {
@@ -68,4 +69,10 @@ button {
 #hateText,
 #believeText {
   margin-top: 0.75rem;
+}
+
+@media screen and (max-width: 62.5rem) {
+  h1 {
+    font-size: 4rem;
+  }
 }
